5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1594_1800.log
== TEST (2019-03-21 10:11:25) 
-- CODE:
 round (x, n) a+b+c
-- ERROR:
File "XXXX", line 1
    round (x, n) a+b+c
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 10:12:53) 
-- CODE:
print
round (x, n) a+b+c
-- ERROR:
File "XXXX", line 2
    round (x, n) a+b+c
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 10:13:10) 
-- CODE:
print
round (0, n) a+b+c
-- ERROR:
File "XXXX", line 2
    round (0, n) a+b+c
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 10:13:22) 
-- CODE:
print
round (0, 0) a+b+c
-- ERROR:
File "XXXX", line 2
    round (0, 0) a+b+c
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
